enhanced by adding more sound recording options

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             </select>
             <button id="startBtn" class="button" disabled>Start Recording</button>
             <button id="stopBtn" class="button" disabled>Stop Recording</button>
+            <div id="recordingTimer" class="hidden">00:00</div>
         </div>
         
         <div class="preview">
