--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <div class="app-header">
-            <h1 class="app-title">Screen Recorder</h1>
+            <h1 class="app-title">FrameFlow Screen Recorder</h1>
             <p>Capture, trim, and save your screen recordings</p>
         </div>
 
