--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="app-header">
             <h1 class="app-title">FrameFlow Screen Recorder</h1>
-            <p>Capture, trim, and save your screen recordings</p>
+            <p>Capture and save your screen recordings</p>
         </div>
 
         <div class="controls">
