--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Screen Recorder</title>
+    <title>FrameFlow Screen Recorder</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="app-header">
-            <h1 class="app-title">FrameFlow Screen Recorder</h1>
-            <p>Capture and save your screen recordings</p>
+            <div class="img-section">
+                <img src="assets/logo.png" alt="App Logo" class="app-logo">
+            </div>
+            <div class="header-section">
+                <h1 class="app-title">FrameFlow Screen Recorder</h1>
+                <p>Capture and save your screen recordings</p>
+            </div>
+            
         </div>
 
         <div class="controls">
